# manen

./: .gitignore  .last_build  .pylintrc  .rstcheck.cfg  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-documentation.yml  deploy-package.yml  python-package.yml  pythonpackage.yml  release-package.yml  test-package.yml  test.yml
docs/: Makefile  about.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  user_guide.html
docs/_modules/: index.html
docs/_modules/manen/: browser.html  cli.html  exceptions.html  finder.html  helpers.html  page_object_model.html
docs/_modules/manen/page_object_model/: component.html  config.html  dom.html  dom_value.html  element.html  exceptions.html  types.html  webarea.html
docs/_modules/manen/resource/: brave.html  chrome.html  local.html
docs/_sources/: about.rst.txt  changelog.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  user_guide.rst.txt
docs/_sources/manen/: manen.browser.rst.txt  manen.cli.rst.txt  manen.page_object_model.config.rst.txt  manen.page_object_model.dom_value.rst.txt  manen.page_object_model.element.rst.txt  manen.page_object_model.rst.txt  manen.page_object_model.webarea.rst.txt  manen.resource.rst.txt  manen.rst.txt
docs/_sources/user_guide/: browser.ipynb.txt  dom_exploration.ipynb.txt  managing_resources.ipynb.txt  page_object_model.ipynb.txt
docs/_static/: documentation_options.js  pygments.css
docs/manen/: manen.browser.html  manen.cli.html  manen.exceptions.html  manen.finder.html  manen.helpers.html  manen.html  manen.page_object_model.component.html  manen.page_object_model.config.html  manen.page_object_model.dom.html  manen.page_object_model.dom_value.html  manen.page_object_model.element.html  manen.page_object_model.exceptions.html  manen.page_object_model.html  manen.page_object_model.types.html  manen.page_object_model.webarea.html  manen.resource.brave.html  manen.resource.chrome.html  manen.resource.html  manen.resource.local.html
docs/source/: about.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  user_guide.rst
docs/source/_static/: theme_override.css
docs/source/manen/: manen.browser.rst  manen.cli.rst  manen.exceptions.rst  manen.finder.rst  manen.helpers.rst  manen.navigator.rst  manen.page_object_model.component.rst  manen.page_object_model.dom.rst  manen.page_object_model.exceptions.rst  manen.page_object_model.rst  manen.page_object_model.types.rst  manen.resource.brave.rst  manen.resource.chrome.application.rst  manen.resource.chrome.driver.rst  manen.resource.chrome.rst  manen.resource.firefox.application.rst  manen.resource.firefox.driver.rst  manen.resource.firefox.rst  manen.resource.local.rst  manen.resource.rst  manen.rst  manen.typing.rst
docs/source/user_guide/: browser.ipynb  managing_resources.ipynb  modelling_dom.ipynb  navigator.ipynb  page_object_model.ipynb  separating_selectors.ipynb
docs/user_guide/: browser.html  browser.ipynb  dom_exploration.html  dom_exploration.ipynb  managing_resources.html  modelling_dom.html  modelling_dom.ipynb  page_object_model.html  page_object_model.ipynb  separating_selectors.html
examples/: README.md
examples/pypi/: pypi.py
examples/scrape_this_site/: countries.py  hockey_teams.py
examples/to_scrape/: books.py  quotes.py
manen/: __init__.py  asset_manager.py  browser.py  cli.py  dom.py  exceptions.py  finder.py  helpers.py  navigator.py  page_object_model.py  resource.py  typing.py
manen/cli/: __main__.py  helpers.py
manen/dom/: element.py  webarea.py
manen/navigator/: chrome.py  mixin.py
manen/page_object_model/: __init__.py  action.py  component.py  config.py  dom.py  dom_value.py  element.py  exceptions.py  types.py  utils.py  webarea.py
manen/resource/: __init__.py  brave.py  chrome.py  local.py
manen/resource/chrome/: __init__.py  application.py  driver.py
manen/resource/firefox/: __init__.py  application.py  driver.py
tests/: test_finder.py  test_helpers.py  test_imports.py  test_page_object_model.py
tests/assets/: page.yaml  page_test_basic.jinja.html  page_test_basic.jinja2  selectors.yaml
tests/page_object_model/: test_config.py
