[tool.poetry]
name = "manen"
version = "0.2.1.dev0"
description = "A package around Selenium with an implementation of the page object model, an enhanced WebDriver and a CLI."
authors = ["kodaho <23268819+kodaho@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://kodaho.github.io/manen/"
repository = "https://github.com/kodaho/manen/"
keywords = [
    "automation",
    "DOM",
    "page object model",
    "scraping",
    "selenium",
    "test",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    { path = "manen" },
]

[tool.poetry.scripts]
manen = "manen.cli:cli"

[tool.poetry.urls]
"Changes" = "https://kodaho.github.io/manen/changelog.html"
"Documentation" = "https://kodaho.github.io/manen/"
"Issue Tracker" = "https://github.com/kodaho/manen/issues/"
"Source Code" = "https://github.com/kodaho/manen/"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.0"
requests = "^2.28.2"
questionary = "^1.10.0"
dateparser = "^1.1.6"
polling2 = "^0.5.0"
pyyaml = "^6.0"

[tool.poetry.group.test.dependencies]
jinja2 = "^3.1.2"
pytest = "^7.2.1"

[tool.poetry.group.docs.dependencies]
furo = "^2022.12.7"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.1"
sphinx-inline-tabs = "^2022.1.2b11"
sphinx = "^6.1.3"
nbsphinx = "^0.8.12"
ipython = "^8.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 98
