[project]
name = "manen"
dynamic = ["version"]
description = "A package around Selenium with an implementation of the page object model, an enhanced WebDriver and a CLI."
authors = [
    { name = "kodaho", email = "23268819+kodaho@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "automation",
    "DOM",
    "page object model",
    "scraping",
    "selenium",
    "test",
]
dependencies = [
    "dateparser>=1.0.0, <2",
    "polling2~=0.4.6",
    "pyyaml>=5.4",
    "questionary>=1.8.1, <2",
    "requests>=2.27.1, <3",
    "selenium>=3.141.0, <5",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPLv3" }

[project.urls]
"Changes" = "https://kodaho.github.io/manen/changelog.html"
"Documentation" = "https://kodaho.github.io/manen/"
"Issue Tracker" = "https://github.com/kodaho/manen/issues/"
"Source Code" = "https://github.com/kodaho/manen/"

[project.scripts]
manen = "manen.cli:cli"

[project.optional-dependencies]
test = ["jinja2==3.1.2", "pytest==7.2.1"]
docs = [
    "furo==2022.12.7",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.1",
    "sphinx-inline-tabs==2022.1.2b11",
    "sphinx==6.1.3",
    "nbsphinx==0.8.12",
    "ipython==8.9.0",
]
dev-tools = [
    "black==22.12.0",
    "isort==5.11.4",
    "mypy==0.991",
    "pylint==2.15.10",
    "rstcheck==6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []
universal = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["manen"]

[tool.hatch.version]
path = "manen/__init__.py"

[tool.ruff]
line-length = 98
