[project]
name = "manen"
dynamic = ["version"]
description = "An implementation of the Page Object Model design pattern, and other utilities for web scraping and automation."
authors = [
    { name = "kodaho", email = "23268819+kodaho@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["automation", "DOM", "page object model", "scraping", "selenium"]
dependencies = ["selenium>=3.141.0, <5"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPLv3" }

[project.urls]
"Changes" = "https://kodaho.github.io/manen/changelog.html"
"Documentation" = "https://kodaho.github.io/manen/"
"Issue Tracker" = "https://github.com/kodaho/manen/issues/"
"Source Code" = "https://github.com/kodaho/manen/"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = [
    "furo>=2024.07.18",
    "ipython>=8.26.0",
    "jupyterlab>=4.2.5",
    "nbsphinx>=0.9.3",
    "pytest>=7.3.2,<8",
    "pytz>=2024.2",
    "rstcheck>=6.2.4",
    "ruff>=0.5.5",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinx>=7.4.7",
]
universal = true

[tool.rye.scripts]
make-docs = { cmd = "make html" }
watch-docs = { cmd = "sphinx-autobuild docs/source docs/build/html --watch manen/" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["manen"]

[tool.hatch.version]
path = "manen/__init__.py"

[tool.ruff]
line-length = 98
