[metadata]
name = manen
version = attr: manen.__version__
author = kodaho
author_email = kodaho@gmail.com
description = A package around `selenium` offering, among other features, an
    implementation of Page Object Model, an enhanced WebDriver and a `find`
    function to quickly retrieve elements.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kodaho/manen/
project_urls =
    Documentation = https://github.com/kodaho/manen/tree/master/docs
keywords =
    automation
    DOM
    page-object-model
    scraping
    selenium
    test
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP :: Browsers
    Topic :: Software Development :: Testing
platforms =
    any

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    dateparser~=1.0.0
    polling2~=0.4.6
    pyyaml~=5.3.1
    questionary~=1.9.0
    requests~=2.23.0
    selenium~=3.141.0

[options.extras_require]
doc =
    furo>=2021.4.11b34
    sphinx-copybutton~=0.3.1
    Sphinx~=3.0.3
test =
    Jinja2~=2.11.2
    pytest~=5.4.1
lint =
    isort~=5.8.0
    mypy~=0.812
    pylint~=2.8.2


[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    manen = manen.cli:main

[aliases]
dists = sdist bdist_wheel
