[metadata]
name = manen
version = attr: manen.__version__
author = kodaho
description = A package around Selenium with an implementation of the page object model, an enhanced WebDriver and a CLI.
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kodaho/manen/
project_urls =
    Issue Tracker = https://github.com/kodaho/manen/issues/
    Changes = https://kodaho.github.io/manen/changelog.html
    Documentation = https://kodaho.github.io/manen/
    Source Code = https://github.com/kodaho/manen/
keywords =
    automation
    DOM
    page object model
    scraping
    selenium
    test
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
platforms =
    any

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    dateparser~=1.0.0
    polling2~=0.4.6
    pyyaml~=5.4
    questionary~=1.10.0
    requests~=2.27.0
    selenium>=3.141.0

[options.extras_require]
doc =
    furo>=2022.1.2
    sphinx-autobuild>=2021.3.14
    sphinx-copybutton~=0.5.0
    sphinx-inline-tabs~=2022.1.2b11
    Sphinx~=4.4.0
    nbsphinx~=0.8.8
    ipython~=8.0.1
test =
    Jinja2~=3.0.3
    pytest~=6.2.5
lint =
    black~=21.12b0
    isort~=5.10.1
    mypy~=0.931
    pylint~=2.12.2
    rstcheck~=3.3.1
    types-dateparser~=1.0.14
    types-PyYAML~=6.0.4
deploy =
    twine~=3.7.1
    wheel~=0.37.1

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    manen = manen.cli:main

[aliases]
dists = sdist bdist_wheel
